fix: scale images on mobile

--- a/public/_sass/_layout.scss
+++ b/public/_sass/_layout.scss
@@ -1,3 +1,8 @@
 .container {
-    max-width: 960px;
+  max-width: 960px;
+}
+
+main p img {
+  max-width: 100%;
+  margin: 0 auto;
 }
